--- a/configs/DDR3-config.cfg
+++ b/configs/DDR3-config.cfg
@@ -3,7 +3,7 @@
 # Comments start with #
 # There are restrictions for valid channel/rank numbers
  standard = DDR3
- channels = 1
+ channels = 4
  ranks = 1
  speed = DDR3_1600K
  org = DDR3_2Gb_x8
@@ -20,8 +20,8 @@
  early_exit = on
 # early_exit = on, off (default value is on)
 # If expected_limit_insts is set, some per-core statistics will be recorded when this limit (or the end of the whole trace if it's shorter than specified limit) is reached. The simulation won't stop and will roll back automatically until the last one reaches the limit.
- expected_limit_insts = 200000000
- warmup_insts = 100000000
+ expected_limit_insts = 0
+ warmup_insts = 0
  cache = no
 # cache = no, L1L2, L3, all (default value is no)
  translation = None
